[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naramarket-mcp"
version = "0.1.0"
description = "Nara Market (G2B) FastMCP server: windowed crawling to CSV/Parquet"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
  {name = "Your Name", email = "you@example.com"}
]
keywords = ["mcp", "nara", "g2b", "crawler", "open-data", "fastmcp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "fastmcp>=0.1.0,<0.2.0",
  "requests>=2.31.0,<2.33.0",
  "python-dotenv>=1.0.0,<1.1.0",
  "pandas>=2.2.0,<2.3.0",
  "pyarrow>=15.0.0,<18.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "mypy>=1.10.0,<1.11.0",
  "types-requests>=2.31.0,<2.32.0",
]
sse = [
  "starlette>=0.37.0,<0.40.0",
  "uvicorn>=0.29.0,<0.33.0",
]

[project.scripts]
naramarket-mcp = "naramarket_server.server:main"

[tool.setuptools]
packages = ["naramarket_server"]
